# youtube-tui

./: .gitignore  Cargo.toml  PKGBUILD  README.md  build.rs  file.txt  flake.nix  index.html  setup-mpv-dev.ps1  threadcounter.sh
.github/workflows/: build_nix.yml
docs/: book.toml
docs/src/: README.md  SUMMARY.md  basic_usage.md  changelogs.md  commands.md  contributors.md  framework.md  how_it_works.md  installation.md  invidious.md
docs/src/config/: README.md  appearance.md  cmdefine.md  commandbindings.md  commands.md  keybindings.md  main.md  pages.md  remap.md  search.md
docs/src/explaination/: event-loop.md  framework.md  how_it_works.md
example config files/: appearance.yml  commands.yml  keybindings.yml  main.yml  pages.yml  search.yml
src/: eggs.rs  exit.rs  init.rs  lib.rs  main.rs  run.rs  ui.rs  update.rs
src/app/: app.rs  mod.rs
src/app/config/: commands.rs  config.rs  keybindings.rs  layouts.rs  main.rs  mod.rs  page_commands.rs
src/app/pages/: channel.rs  global.rs  item_info.rs  main_menu.rs  mod.rs  search.rs
src/config/: appearance.rs  commandbindings.rs  commands.rs  commands_remap.rs  configtrait.rs  keybindings.rs  main.rs  mod.rs  pages.rs  remap.rs  search.rs  serde.rs
src/functions/: center_rect.rs  download_all_thumbnails.rs  insert_vec.rs  mod.rs
src/global/: errors.rs  invidiousclient.rs  item.rs  keyaction.rs  message.rs  mod.rs  page.rs  status.rs  tasks.rs
src/global/common/: common_types.rs  mod.rs
src/global/common/exposed/: mod.rs
src/global/common/exposed/channel/: channel.rs  comments.rs  mod.rs  playlists.rs  search.rs  videos.rs
src/global/common/exposed/universal/: mixes.rs  mod.rs  playlists.rs  popular.rs  search.rs  stats.rs  suggestions.rs  trending.rs
src/global/common/exposed/video/: annotations.rs  captions.rs  comments.rs  mod.rs  video.rs
src/global/common/hidden/: adaptiveformat.rs  caption.rs  channelitems.rs  comment.rs  countrycodes.rs  formatstream.rs  mix.rs  playlistvideo.rs  popularitem.rs  searchitem.rs  videoshort.rs
src/global/functions/: clipboard.rs  command_capture.rs  date_text.rs  download_all_images.rs  envs.rs  fake_rand.rs  find_library.rs  from_url.rs  init_move.rs  key_input.rs  mod.rs  paths.rs  popup_area.rs  remove_word.rs  run_command.rs  secs_display_string.rs  singleitem_load.rs  type_name_of_val.rs  update_provider.rs  viewcount_text.rs
src/global/structs/: errors.rs  history.rs  invidiousclient.rs  item.rs  keyaction.rs  library.rs  localstore.rs  message.rs  mod.rs  mpv.rs  page.rs  rustypipe.rs  state_env.rs  status.rs  subscriptions.rs  tasks.rs  watchhistory.rs
src/global/structs/providers/: invidiousclient.rs  mod.rs  rustypipe.rs
src/global/traits/: asurlstring.rs  collection.rs  configtrait.rs  mod.rs  search_provider.rs  searchfilteritem.rs
src/items/: channeldisplay.rs  channellist.rs  iteminfo.rs  itemlist.rs  messagebar.rs  mod.rs  pagebutton.rs  searchbar.rs  searchfilters.rs  singleitem.rs  videolist.rs
src/render/: global.rs  main_menu.rs  mod.rs  render.rs
src/render/pages/: global.rs  main_menu.rs  mod.rs
src/structs/: apphistory.rs  fullchannel.rs  fullplaylist.rs  fullvideo.rs  listitem.rs  messagetext.rs  minichannel.rs  miniplaylist.rs  minivideo.rs  mod.rs  page.rs  search_settings.rs  states.rs  watchhistory.rs
src/traits/: config.rs  item.rs  key_input.rs  load_item.rs  mod.rs  page.rs  render_item.rs  select_item.rs
src/widgets/: force_clear.rs  horizontal_split.rs  item_display.rs  item_info.rs  mod.rs  text_list.rs
