[package]
name = "youtube-tui"
version = "0.8.2"
authors = ["Siriusmart <siriusmart@tuta.io>"]
edition = "2021"
description = "An aesthetically pleasing YouTube TUI written in Rust"
documentation = "https://docs.rs/youtube-tui"
readme = "README.md"
homepage = "https://siriusmart.github.io/youtube-tui"
repository = "https://github.com/siriusmart/youtube-tui"
license = "GPL-3.0-or-later"
keywords = ["cli", "terminal", "youtube", "tui"]
categories =["command-line-interface", "command-line-utilities"]
exclude = ["/docs", "/LICENSE", "/threadcounter.sh", "/PKGBUILD"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["sixel", "halfblock", "clipboard", "mpv"]
sixel = ["viuer/sixel"]
halfblock = ["viuer"]
clipboard = ["dep:clipboard"]
mpv = ["dep:libmpv-sirno"]

[dependencies]
serde = {version = "1.0", default-features = false, features = ["derive"]}
crossterm = {version = "0.28", default-features = false, features = ["serde"]}
viuer = {version = "0.7", default-features = false, optional = true}
home = "0.5"
chrono = {version = "0.4", default-features = false, features = ["clock"]}
typemap = {version = "0.3", default-features = false}
tui-additions = {version = "0.3", default-features = false, features = ["framework", "widgets"]}
invidious = {version = "0.7"}
serde_yaml_ng = {version = "0.9", default-features = false}
dyn-clone = {version = "1.0", default-features = false}
serde_json = {version = "1.0", default-features = false}
clipboard = {version = "0.5", optional = true}
urlencoding = "2.1"
ratatui = {version = "0.28", default-features = false, features = ["serde"]}
unicode-segmentation = "1"
libmpv-sirno = { version = "2.0.2-fork.1", optional = true }

# libmpv = { path = "libmpv-rs", optional = true, version = "2" }
# tui-additions = {path = "../../Rust/Packages/tui-additions", default-features = false, features = ["framework", "widgets"]}
# invidious = {path = "../../Rust/Packages/invidious"}

[package.metadata.docs.rs]
no-default-features = true

# [workspace]
# members = [ "libmpv-rs", "libmpv-rs/libmpv-sys" ]
