[package]
name = "youtube-tui"
version = "0.9.1"
authors = ["Siriusmart <siriusmart@tuta.io>"]
edition = "2021"
description = "An aesthetically pleasing YouTube TUI written in Rust"
documentation = "https://docs.rs/youtube-tui"
readme = "README.md"
homepage = "https://tui.siri.ws/youtube"
repository = "https://github.com/siriusmart/youtube-tui"
license = "GPL-3.0-or-later"
keywords = ["cli", "terminal", "youtube", "tui"]
categories =["command-line-interface", "command-line-utilities"]
exclude = ["/docs", "/LICENSE", "/threadcounter.sh", "/PKGBUILD"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["sixel", "halfblock", "clipboard", "mpv", "rustypipe"]
sixel = ["viuer/sixel"]
halfblock = ["viuer"]
clipboard = ["dep:clipboard"]
mpv = ["dep:libmpv-sirno"]
invidious = ["invidious/httpreq_sync"]
rustypipe = []

[dependencies]
serde = {version = "1.0", default-features = false, features = ["derive"]}
crossterm = {version = "0.29", default-features = false, features = ["serde"]}
viuer = {version = "0.9", default-features = false, optional = true, features = ["print-file"]}
home = "0.5"
chrono = {version = "0.4", default-features = false, features = ["clock"]}
typemap = {version = "0.3", default-features = false}
tui-additions = {version = "0.4", default-features = false, features = ["framework", "widgets"]}
invidious = { version = "0.7", default-features = false, optional = true }
serde_yaml_ng = {version = "0.10", default-features = false}
dyn-clone = {version = "1.0", default-features = false}
serde_json = {version = "1.0", default-features = false}
clipboard = {version = "0.5", optional = true}
urlencoding = "2.1"
ratatui = {version = "0.29", default-features = false, features = ["serde"]}
unicode-segmentation = "1"
libmpv-sirno = { version = "2.0.2-fork.1", optional = true }

rustypipe = "0.11"
futures = { version = "0.3", features = [ "executor" ] }
tokio = { version = "1", features = [ "rt" ]}
http_req = "0.14.1"

# libmpv = { path = "libmpv-rs", optional = true, version = "2" }
# tui-additions = {path = "../Rust/tui-additions", default-features = false, features = ["framework", "widgets"]}
# invidious = {path = "../Rust/invidious-rs"}

[package.metadata.docs.rs]
no-default-features = true

# [workspace]
# members = [ "libmpv-rs", "libmpv-rs/libmpv-sys" ]
